--- a/react-admin/src/index.css
+++ b/react-admin/src/index.css
@@ -8,11 +8,20 @@ body,
   height: 100%;
   width: 100%;
   font-family: "Source Sans 3", sans-serif;
+  overflow-x: auto;
 }
 
 .app {
   display: flex;
   position: relative;
+  height: 100vh;
+  width: 100vw;
+}
+
+.main-content {
+  /* flex-grow: 1; */
+  overflow-y: auto;
+  height: calc(100vh - 68.56px);
 }
 
 ::-webkit-scrollbar {
@@ -21,7 +30,7 @@ body,
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #e0e0e0;
+  background: #e0e0e020;
 }
 
 /* Handle */
